@@ -1,3 +1,9 @@
+2007-06-07 Added csv2rec to matplotlib.mlab to support automatically
+           converting csv files to record arrays using type
+           introspection, and turned on native datetime support using
+           the new units support in matplotlib.dates.  See
+           examples/loadrec.py !  JDH
+
 2007-06-07 Simplified internal code of _auto_legend_data - NN
 
 2007-06-04 Added labeldistance arg to Axes.pie to control the raidal
